Thu Dec 23 13:00:43 GMT 2010  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Whitespace consistency tweak.

Thu Dec 23 11:01:26 GMT 2010  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,tests/queryparsertest.cc: Handle
	  NEAR/<offset> and ADJ/<offset> where offset isn't an integer the same
	  way at the end of the query as in the middle.

Tue Dec 21 10:28:08 GMT 2010  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: If we can't bind to the specified port because it
	  is a privileged one, exit with code 77 (EX_NOPERM) to make it easier
	  to automatically handle failure when starting the server from a
	  script.

Tue Dec 21 07:43:52 GMT 2010  Olly Betts <olly@survex.com>

	* docs/index.html: Add link to main website.

Tue Dec 21 07:40:57 GMT 2010  Olly Betts <olly@survex.com>

	* docs/index.html,docs/overview.html: Update links to wiki.xapian.org
	  to point to trac.xapian.org/wiki instead.

Mon Dec 20 10:02:06 GMT 2010  Richard Boulton <richard@tartarus.org>

	* docs/deprecation.rst: Add note about botched removal of python's
	  Enquire.get_matching_terms (now fully removed).

Sun Dec 19 12:40:12 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update release date.

Sat Dec 18 13:17:52 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.4.

Wed Dec 15 11:56:22 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue Dec 14 12:46:36 GMT 2010  Olly Betts <olly@survex.com>

	* HACKING,tests/runtest.in: Add XAPIAN_TESTSUITE_LD_PRELOAD hook to
	  allow libeatmydata to easily be used when running the testsuite.

Mon Dec 13 14:28:19 GMT 2010  Olly Betts <olly@survex.com>

	* include/xapian/: Make it more explicitly clear that PostingIterator,
	  PositionIterator, and TermIterator's skip_to methods advance (and
	  hence shouldn't be expected to allow you to "rewind" the stream).

Mon Dec 13 14:18:18 GMT 2010  Olly Betts <olly@survex.com>
